--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/index.4d663569.css">
-    <script src="/index.0641b553.js" defer=""></script>
-</head>
-
-<body>
-    <h1>Hi!</h1>
-
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Document</title><link rel="stylesheet" href="/index.ace6ded6.css"><script type="module" src="/index.7630b740.js"></script></head><body> <h1>Hi!</h1> </body></html>
